OpenJMLTest/test/gitbug450/expected
test/gitbug450/ArrList.java:15: error: incompatible types: int cannot be converted to String
        theList.add(a);
                    ^
Operation not performed because of parse or type errors
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
